--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
   service-go:
     docker:
       - image: circleci/golang:1.12
-    working_directory: /go/src/specgen-test-service-go
+    working_directory: /go/src/test-service-go
     steps:
       - checkout
       - run:
@@ -26,7 +26,7 @@ jobs:
           destination: zips
       - store_artifacts:
           path: ./dist
-          destination: specgen-test-service-go
+          destination: test-service-go
 #      - store_artifacts:
 #          path: /tmp/test-results
 #          destination: go-test-report
