generate-service: Fixed generation of responses and check types, changed the spec file

--- a/spec.yaml
+++ b/spec.yaml
@@ -65,6 +65,7 @@ http:
     check_forbidden:
       endpoint: GET /check/forbidden
       response:
+        ok: Message
         forbidden: empty
 
 models:
